<resources>
    <string name="app_name">Калькуляторы бухгалтера</string>
    <string name="NDS_calc_text">Рассчет НДС</string>
    <string name="vacation_calc_text">Отпускные</string>
    <string name="penality_calc_text">Пени</string>
    <string name="NDS_calc_hint_no_NDS">Сумма без НДС</string>
    <string name="NDS_calc_hint_NDS">Ставка НДС</string>
    <string name="NDS_calc_hint_sum">Сумма с НДС</string>
    <string name="NDS_calc_hint_tax_value">В том числе НДС</string>
    <string name="vacation_calc_vac_button">Расчет отпуска</string>
    <string name="vacation_calc_comp_button">Расчет компенсации</string>
    <string name="vacation_calc_time_more_button">Сотрудник отработал месяц и более</string>
    <string name="vacation_calc_time_month_button">Сотрудник отработал менее месяца</string>
    <string name="vacation_calc_time_empty_button">Сотрудник не работал ни одного дня</string>
</resources>
