<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:id="@+id/btn_vacation_time_more"
            style="@style/CardStyle"
            >

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/vacation_calc_time_more_button"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_vacation_time_month"
            style="@style/CardStyle"
            >

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/vacation_calc_time_month_button"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_vacation_time_empty"
            style="@style/CardStyle"
            >

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/vacation_calc_time_empty_button"
                />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>