<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <android.support.v7.widget.CardView
            android:id="@+id/btn_nds_calc"
            style="@style/CardStyle"
            >

            <TextView
                android:id="@+id/nds_calc_head"
                style="@style/TextViewStyle"
                android:text="@string/NDS_calc_text"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_vacation_calc"
            style="@style/CardStyle"
            >


            <TextView
                android:id="@+id/vacation_calc_head"
                style="@style/TextViewStyle"
                android:text="@string/vacation_calc_text"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_penalty_calc"
            style="@style/CardStyle"
            >


            <TextView
                android:id="@+id/penalty_calc_head"
                style="@style/TextViewStyle"
                android:text="@string/penality_calc_text"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>